--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,11 @@
       rel="stylesheet"
       id="bootstrap-css"
     />
+    <style>
+      .mt-10 {
+        margin-top: 10px;
+      }
+    </style>
     <title>MY_APP_NAME</title>
   </head>
 
